--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         <p>There are various aspects of music and the indistry that I appreciate!</p>
         
         <ul>
-            <li><strong>Genre Exploration:</strong> R&B, indie, alternative, hip hop, folk, rock, and pop</li>
+            <li><strong>Genre Exploration:</strong> R&B, indie, alternative, hip hop, folk, rock, classical, and pop</li>
             <li><strong>Music Production:</strong> Understanding recording techniques and how technology shapes sound</li>
             <li><strong>Music History:</strong> Tracing the evolution of genres and understanding cultural contexts</li>
             <li><strong>Artist Development:</strong> Following emerging artists and understanding career trajectories</li>
