--- a/index.html
+++ b/index.html
@@ -152,26 +152,31 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Album/EP</th>
-                        <th>Release Year</th>
-                        <th>Peak Chart Position</th>
+                        <th>Release</th>
+                        <th>Year</th>
+                        <th>Type</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Don't Smile at Me</td>
-                        <td>2017</td>
-                        <td>#14 Billboard 200</td>
+                        <td>Baby</td>
+                        <td>2025</td>
+                        <td>Studio Album</td>
                     </tr>
                     <tr>
-                        <td>When We All Fall Asleep, Where Do We Go?</td>
-                        <td>2019</td>
-                        <td>#1 Billboard 200</td>
-                    </tr>
-                    <tr>
-                        <td>Happier Than Ever</td>
+                        <td>Absolutely</td>
                         <td>2021</td>
-                        <td>#1 Billboard 200</td>
+                        <td>Studio Album</td>
+                    </tr>
+                    <tr>
+                        <td>How Do You Feel About Getting Married?</td>
+                        <td>2020</td>
+                        <td>EP</td>
+                    </tr>
+                    <tr>
+                        <td>Sci Fi 1</td>
+                        <td>2019</td>
+                        <td>EP</td>
                     </tr>
                 </tbody>
             </table>
