--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
             
         </div>
         
-        <form class="contact-form" action="#" method="post">
+        <form class="contact-form" action="#" method="post" netlify>
             <div class="form-group">
                 <label for="name">Name *</label>
                 <input type="text" id="name" name="name" required>
